
syntax = "proto3";

package vault;

message GenerateNonceRequest {
  string operational_did = 1;
}
message GenerateNonceResponse {
  bytes commitment = 1;
}

message PartialSignRequest {
  string operational_did = 1;
  bytes message = 2;
  repeated PeerCommitment commitments = 3;
}

message PeerCommitment {
  string peer_id = 1;
  bytes commitment = 2;
}

message PartialSignResponse {
  bytes signature = 1;
}

service CustodyVault {
  rpc GenerateNonce(GenerateNonceRequest) returns (GenerateNonceResponse);
  rpc PartialSign(PartialSignRequest) returns (PartialSignResponse);
}
